@@ -1,0 +1,28 @@
+#!/usr/bin/perl
+
+use Test::More tests => 5;
+
+use strict;
+use warnings;
+
+BEGIN { use_ok( "EPrints" ); }
+BEGIN { use_ok( "EPrints::Test" ); }
+
+my $repoid = EPrints::Test::get_test_id();
+
+my $ep = EPrints->new();
+isa_ok( $ep, "EPrints", "EPrints->new()" );
+if( !defined $ep ) { BAIL_OUT( "Could not obtain the EPrints System object" ); }
+
+is( $ep->repository( "badrepoid" ), undef, "Bad repository ID returns undef" );
+
+my $repo = $ep->repository( $repoid );
+isa_ok( $repo, "EPrints::Repository", "Get a repository object ($repoid)" );
+if( !defined $repo ) { BAIL_OUT( "Could not obtain the Repository object" ); }
+
+# No test for:
+#
+# $repo = $ep->current_repository(); # from Apache::Request URI
+#
+# EPrints->abort( $message );
+
